# server

./: .gitignore  .gitmodules  CI.md  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml  release.yml
packaging/linux/: 99-st-server.rules  README.md  install.sh  st-server-tray.desktop  st-server.desktop  st-server.service  sysusers.d-st-server.conf
scripts/: build-windows-msvc.ps1  package-macos-app.sh  package-unix.sh  package-windows-release.ps1
src/: adaptive_bitrate.rs  api_client.rs  broadcast.rs  clipboard.rs  colorspace.rs  control_ipc.rs  control_socket.rs  encode.rs  encode_config.rs  encode_cuda.rs  encode_sw.rs  encode_vaapi.rs  encode_vt.rs  encode_win.rs  file_transfer.rs  game_mode.rs  input.rs  intra_refresh_loopback.rs  linux_uring.rs  macos_display.rs  main.rs  recovery_loopback.rs  screen_wake.rs  server_control.rs  session_bridge.rs  session_follow.rs  transport.rs  tray.rs  tray_companion.rs  tray_portal.rs  updater.rs  video_profile.rs
src/audio/: capture.rs  encode.rs  mod.rs
src/capture/: macos.rs  mod.rs  windows.rs
src/capture/linux/: ext_image_copy.rs  gbm_probe.rs  kms_capture.rs  kms_gpu_copy.rs  mod.rs  nvfbc_capture.rs  pipewire_capture.rs  wl_capture.rs  x11_capture.rs
