[package]
name = "st-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
st-protocol = { path = "protocol", features = ["tunnel"] }
crossbeam-channel = "0.5"
flate2 = "1"
libc = "0.2"
self-replace = "1"
semver = "1"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
ureq = { version = "2", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = "1.5"
tray-icon = { version = "0.21", default-features = false }
winit = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-scaling"] }
ffmpeg-sys-next = { version = "8.1", default-features = false, features = ["avcodec", "avformat", "swscale"] }
libloading = "0.8"
pipewire = "0.9"
ksni = { version = "0.3", features = ["blocking"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
futures-lite = "2"
drm = "0.14"
drm-fourcc = "2.2"
nix = { version = "0.29", features = ["ioctl", "fs", "mman"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
