[package]
name = "st-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
st-protocol = { path = "protocol", features = ["tunnel"] }
crossbeam-channel = "0.5"
dirs = "5"
sha2 = "0.10"
flate2 = "1"
libc = "0.2"
self-replace = "1"
semver = "1"
arboard = "3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tempfile = "3"
ureq = { version = "2", default-features = true }
zip = { version = "2", default-features = false, features = ["deflate"] }

[target.'cfg(any(target_os = "linux", target_os = "windows", target_os = "macos"))'.dependencies]
ffmpeg-next = { version = "8.1", default-features = false, features = ["codec", "format", "software-scaling"] }
ffmpeg-sys-next = { version = "8.1", default-features = false, features = ["avcodec", "avformat", "swscale"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSBitmapImageRep", "NSCursor", "NSImage", "NSImageRep"] }
screencapturekit = "1.5"
tray-icon = { version = "0.21", default-features = false }
winit = "0.30"

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"
pipewire = "0.9"
ksni = { version = "0.3", features = ["blocking"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
zvariant = "5"
futures-lite = "2"
drm = "0.14"
drm-fourcc = "2.2"
nix = { version = "0.29", features = ["ioctl", "fs", "mman"] }
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["client"] }
wayland-protocols-wlr = { version = "0.3", features = ["client"] }

[target.'cfg(target_os = "windows")'.dependencies]
tray-icon = { version = "0.21", default-features = false }
winit = "0.30"
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
